--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: /assets/Profile image Yair.jpeg
+logo: /assets/Profile image Yair-1.jpeg
 theme: jekyll-theme-minimal
 title: Yair Brama
 description: My data science portfolio
